capture/default/personal/us-east-1/20250708/212018/vpcs/devops-locked-vpc/network_acls.json
{
    "NetworkAcls": [
        {
            "Associations": [
                {
                    "NetworkAclAssociationId": "aclassoc-0b3072187ee2a0b15",
                    "NetworkAclId": "acl-050c3edfbc5a5c45c",
                    "SubnetId": "subnet-0a7863c4791ae49f2"
                }
            ],
            "Entries": [
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": true,
                    "Protocol": "-1",
                    "RuleAction": "allow",
                    "RuleNumber": 100
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": true,
                    "Protocol": "-1",
                    "RuleAction": "deny",
                    "RuleNumber": 32767
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": false,
                    "Protocol": "-1",
                    "RuleAction": "allow",
                    "RuleNumber": 100
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": false,
                    "Protocol": "-1",
                    "RuleAction": "deny",
                    "RuleNumber": 32767
                }
            ],
            "IsDefault": true,
            "NetworkAclId": "acl-050c3edfbc5a5c45c",
            "Tags": [],
            "VpcId": "vpc-0f7fa8fdff02da590",
            "OwnerId": "***"
        }
    ]
}
