capture/default/personal/us-east-1/20250708/212018/vpcs/devops-locked-vpc/security_groups.json
{
    "SecurityGroups": [
        {
            "GroupId": "sg-0781d2cfe7578f891",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ],
            "VpcId": "vpc-0f7fa8fdff02da590",
            "SecurityGroupArn": "arn:aws:ec2:us-east-1:***:security-group/sg-0781d2cfe7578f891",
            "OwnerId": "***",
            "GroupName": "default",
            "Description": "default VPC security group",
            "IpPermissions": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [
                        {
                            "UserId": "***",
                            "GroupId": "sg-0781d2cfe7578f891"
                        }
                    ],
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ]
        },
        {
            "GroupId": "sg-0e7e142f6e32a870f",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "tcp",
                    "FromPort": 443,
                    "ToPort": 443,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ],
            "Tags": [
                {
                    "Key": "aws:cloudformation:logical-id",
                    "Value": "DevOpsSSMEndpointSG"
                },
                {
                    "Key": "DevOps",
                    "Value": "true"
                },
                {
                    "Key": "Name",
                    "Value": "DevOps-SSMEndpointSG-DevOps"
                },
                {
                    "Key": "aws:cloudformation:stack-id",
                    "Value": "arn:aws:cloudformation:us-east-1:***:stack/network-mapping/abc89460-5c7a-11f0-9326-0affc332652d"
                },
                {
                    "Key": "aws:cloudformation:stack-name",
                    "Value": "network-mapping"
                }
            ],
            "VpcId": "vpc-0f7fa8fdff02da590",
            "SecurityGroupArn": "arn:aws:ec2:us-east-1:***:security-group/sg-0e7e142f6e32a870f",
            "OwnerId": "***",
            "GroupName": "network-mapping-DevOpsSSMEndpointSG-17xbfCK1105T",
            "Description": "Allow HTTPS from DevOps subnet to SSM endpoints",
            "IpPermissions": [
                {
                    "IpProtocol": "tcp",
                    "FromPort": 443,
                    "ToPort": 443,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "10.2.0.0/16"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ]
        }
    ]
}
